--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -18,6 +18,8 @@
         <div class="field">
           <label>Nachname</label>
           <input type="text" formControlName="lastname">
+          <div *ngIf="errors.lastname" class="ui negative message">{{
+            errors.lastname }}</div>
         </div>
 
       </div>
@@ -30,16 +32,22 @@
       <option value="m">männlich</option>
       <option value="f">weiblich</option>
     </select>
+          <div *ngIf="errors.gender" class="ui negative message">{{
+            errors.gender }}</div>
         </div>
 
         <div class="field">
           <label>Sozialversicherungsnummer</label>
           <input type="number" formControlName="ssn">
+          <div *ngIf="errors.ssn" class="ui negative message">{{
+            errors.ssn }}</div>
         </div>
 
         <div class="field">
           <label>Geburtsdatum</label>
           <input type="date" formControlName="birthdate">
+          <div *ngIf="errors.birthdate" class="ui negative message">{{
+            errors.birthdate }}</div>
         </div>
       </div>
 
@@ -47,11 +55,15 @@
         <div class="field">
           <label>E-Mail</label>
           <input type="email" formControlName="email">
+          <div *ngIf="errors.email" class="ui negative message">{{
+            errors.email }}</div>
         </div>
 
         <div class="field">
           <label>Telefon</label>
           <input type="text" formControlName="phone">
+          <div *ngIf="errors.phone" class="ui negative message">{{
+            errors.phone }}</div>
         </div>
       </div>
 
@@ -76,9 +88,7 @@
   </div>
   <div class="four wide column">
     <div class="vaccination-registration-info">
-      <h3>{{vaccination.location_id}}</h3>
-      <p>Dieser Impftermin findet bei der Adresse <b>{{vaccination?.location.address}}, {{vaccination?.location.postalcode}}
-      {{vaccination?.location.city}}</b> am <b>{{vaccination?.date | date:"dd.MM.yyyy"}}</b> zwischen <b>{{vaccination?.starttime | date:"HH:mm"}} und
+      <p>Dieser Impftermin findet am <b>{{vaccination?.date | date:"dd.MM.yyyy"}}</b> zwischen <b>{{vaccination?.starttime | date:"HH:mm"}} und
       {{vaccination?.endtime | date:"HH:mm"}}</b> statt.</p>
     </div>
 
