--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@
 body {
   font-family: 'Poppins', sans-serif !important;
   color: #333;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 a,
@@ -30,6 +32,7 @@ h1,
   font-weight: 700 !important;
   font-size: 35px !important;
   margin-bottom: 5% !important;
+  margin-top: 2% !important;
 }
 
 h2,
