--- a/src/app/location-details/location-details.component.html
+++ b/src/app/location-details/location-details.component.html
@@ -1,84 +1,73 @@
 <div class="ui grid" *ngIf="location" class="item cfy-location-details">
   <div class="twelve wide column">
+    <a [routerLink]="'/locations'" class="back-arrow">
+      <i class="arrow left large icon"></i>
+    </a>
     <h1 class="ui header">{{ location.name }}</h1>
-    <div class="ui">{{ location.address }}</div>
-    <div class="ui">{{ location.postalcode }} {{ location.city }}</div>
-    <div class="ui divider"></div>
-    <div class="ui grid">
-      <div class="four wide column">
-        <h4 class="ui header">User</h4>
+    <div class="icon-text-wrapper">
+      <div><i class="map marker alternate icon"></i></div>
+      <div>
+        <div class="ui">{{ location.address }}</div>
+        <div class="ui">{{ location.postalcode }} {{ location.city }}</div>
       </div>
     </div>
+    <br>
+    <div class="ui divider"></div>
   </div>
-  <div class="sixteen wide column">
-    <h3 class="ui header">Zeit</h3>
-    {{ location.city }}
+  <br>
+  <div>
+    <div class="ui compact message">
+      <div class="content">
+        <div class="header">
+          <div>Hier gibt es aktuell {{location.vaccinations?.length}} Impftermine.</div>
+        </div>
+      </div>
+    </div>
+
+    <br><br>
+
+    <div *ngIf="location.vaccinations?.length != 0">
+
+      <h3 class="ui subheader">
+        Impftermine am Standort {{location.name}}, {{location.city}}:
+      </h3>
+      <table class="ui five column table">
+        <thead>
+          <tr>
+            <th>Datum</th>
+            <th>Von</th>
+            <th>Bis</th>
+            <th>Maximale Teilnehmeranzahl</th>
+            <th></th>
+
+          </tr>
+        </thead>
+        <tbody>
+
+          <tr *ngFor="let vac of location.vaccinations; last as l">
+
+            <td>{{vac.date | date:'dd.MM.yyyy' }}</td>
+            <td>{{vac.starttime}}</td>
+            <td>{{vac.endtime}}</td>
+            <td> {{vac.maxParticipants}}</td>
+            <td> <a [routerLink]="['../../vaccinations', vac?.id]"><i class="circular chevron right icon"></i> Zum
+                Impftermin
+              </a></td>
+
+
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
+    <br><br>
   </div>
-</div>
 
-{{vaccination.location_id}}, {{location.id}}
-
-<span *ngFor="let vaccination of vaccinations; last as l">
-      {{ vaccination.location_id }}<span *ngIf="!l">, </span>
-</span>
-
-
-<div>
-  <h3 class="ui subheader">
-    <i class="angle right icon"></i>Imptermine in {{location.name}}, {{location.city}}:
-  </h3>
-  <table class="ui five column table">
-    <thead>
-      <tr>
-        <th>Datum</th>
-        <th>Von</th>
-        <th>Bis</th>
-        <th>Verfügbare Impfungen</th>
-        <th></th>
-
-
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let vac of location.vaccinations; last as l">
-
-        <td>{{vac.date}}</td>
-        <td>{{vac.starttime}}</td>
-        <td>{{vac.endtime}}</td>
-        <td> {{vac.maxParticipants}}</td>
-        <td> <a [routerLink]="['../../vaccinations', vac?.id]"><i class="circular chevron right icon"></i> Hier anmelden
-          </a></td>
-
-
-
-
-
-      </tr>
-
-    </tbody>
-    <tfoot>
-      <tr>
-        <th>Am Standort {{location.name}} gibt es aktuell {{location.vaccinations?.length}} Impftermine.</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-
-
-      </tr>
-    </tfoot>
-  </table>
-</div>
-
-<!--<button [routerLink]="'/locations'" class="ui red button">
+  <!--<button [routerLink]="'/locations'" class="ui red button">
   Zurück zur Übersicht
 </button>-->
-<button routerLink=".." class="ui crayola cfy-button">
-  Zurück zur Übersicht
-</button>
 
-<a class="ui cfy-button" (click)="removeLocation()">
-  <i class="remove icon"></i>
-  Löschen
-</a>
+
+  <a *ngIf="user?.isAdmin == true" class="ui cfy-button" (click)="removeLocation()">
+    <i class="remove icon"></i>
+    Impfort löschen </a>
