--- a/src/app/location-list/location-list.component.html
+++ b/src/app/location-list/location-list.component.html
@@ -1,15 +1,4 @@
-<!--<h2>Aktuelle Impftermine</h2>
-<div class="ui grid">
-  <a
-    *ngFor="let location of locations"
-    class="five wide column item cfy-location-list-item"
-    [location]="location"
-    [routerLink]="['./', location.id]"
-  ></a>
-</div>
--->
-
-<h2>Aktuelle Impftermine</h2>
+<h1>Aktuelle Impforte</h1>
 
 <div class="ui equal height stretched grid">
   <a *ngFor="let location of locations" class="four wide column item cfy-location-list-item" [location]="location"
