--- a/src/app/location-list-item/location-list-item.component.html
+++ b/src/app/location-list-item/location-list-item.component.html
@@ -1,6 +1,7 @@
 <div class="vaccination-item">
   <div class="content">
     <div class="content-top">
+      <h3 class="header">{{location.name}}</h3>
       <div class="description">{{ location.postalcode }}</div>
       <div class="metadata">
       </div>
