--- a/src/app/location-list-item/location-list-item.component.html
+++ b/src/app/location-list-item/location-list-item.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="content-top">
       <h3 class="header">{{location.name}}</h3>
-      <div class="description">{{ location.postalcode }}</div>
+      <div class="description">{{ location.postalcode }} {{location.city}}</div>
       <div class="metadata">
       </div>
     </div>
