--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -1,3 +1,6 @@
+<a [routerLink]="'/..'" class="back-arrow">
+  <i class="arrow left large icon"></i>
+</a>
 <h1>Impftermin hinzufügen</h1>
 
 <div class="ui grid">
