--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,3 +1,6 @@
+<a [routerLink]="['/..']" class="back-arrow">
+  <i class="arrow left large icon"></i>
+</a>
 <h1>Anmeldung zum Impftermin</h1>
 
 
@@ -81,16 +84,17 @@
     </select>
       </div>
 
-
+      <br>
       <button type="submit" class="ui cfy-button crayola">Jetzt anmelden</button>
 
     </form>
   </div>
   <div class="four wide column">
+    <!--
     <div class="vaccination-registration-info">
       <p>Dieser Impftermin findet am <b>{{vaccination?.date | date:"dd.MM.yyyy"}}</b> zwischen <b>{{vaccination?.starttime | date:"HH:mm"}} und
       {{vaccination?.endtime | date:"HH:mm"}}</b> statt.</p>
-    </div>
+    </div>-->
 
     <div>
       <img src="../assets/img/corona1.svg" alt="">
