--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="ui grid" *ngIf="vaccination" class="item cfy-vaccination-details">
     <div class="twelve wide column">
-      <a [routerLink]="'/vaccinations'" class="back-arrow">
+      <a [routerLink]="'/..'" class="back-arrow">
         <i class="arrow left large icon"></i>
       </a>
       <h1 class="ui header">Impfung am {{ vaccination.date | date:'dd.MM.yyyy' }}</h1>
@@ -112,7 +112,7 @@
     Löschen
   </a>
 
-  <h4 *ngIf="user?.vaccination_id != null">
+  <h4 *ngIf="user?.vaccination_id != null && user?.isAdmin == false">
     <i class="syringe icon"></i>
     Du bist bereits zu einer Impfung angemeldet.
   </h4>
