--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -49,14 +49,25 @@
 
 
       <!--(change)="selectChangeHandler($event)"-->
-      <div class="field">
+      <div *ngIf="this.vacToLoc == false" class="field">
         <label>Ort</label>
         <select class="ui dropdown" formControlName="location_id">
       <option *ngFor="let location of locations" [value]="location.id">
       {{location.name}}, {{location.postalcode}} {{location.city}}</option>
     </select>
+        <br>
       </div>
-      <br>
+
+
+      <div *ngIf="this.vacToLoc == true" class="field">
+        <label>Ort</label>
+        <select class="ui dropdown" formControlName="location_id">
+      <option *ngFor="let location of locations" [value]="this.location.id">
+      {{location.name}}, {{location.postalcode}} {{location.city}}</option>
+    </select>
+        <br>
+      </div>
+
 
 
       <button type="submit" class="ui cfy-button crayola"
