--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -12,7 +12,7 @@
             }}</p>
           <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
 
-          <div *ngIf="this.checkMaxPersons() == true; else userCount">
+          <div *ngIf="this.checkMaxParticipants() == true; else userCount">
             <div class="ui negative message">
               <div class="header">
                 Alle freien Plätze vergeben!
@@ -117,23 +117,23 @@
     Du bist bereits zu einer Impfung angemeldet.
   </h4>
   <span *ngIf="user?.isAdmin == true; else normalUser">
-    <a *ngIf="checkMaxPersons() == false" class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
+    <a *ngIf="checkMaxParticipants() == false" class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
       <i class="plus icon"></i> Jetzt User hinzufügen </a>
   </span>
   <ng-template #normalUser>
 
-    <a *ngIf="user?.vaccination_id == null && authService.isLoggedIn() && checkMaxPersons() == false; else goToLogin"
+    <a *ngIf="user?.vaccination_id == null && authService.isLoggedIn() && checkMaxParticipants() == false; else goToLogin"
       class="ui crayola cfy-button" [routerLink]="['../../user', vaccination?.id]">
       <i class="plus icon"></i> Jetzt anmelden
     </a>
     <ng-template #goToLogin>
-      <a *ngIf="user?.vaccination_id == null && this.checkMaxPersons() == false" class="ui crayola cfy-button"
+      <a *ngIf="user?.vaccination_id == null && this.checkMaxParticipants() == false" class="ui crayola cfy-button"
         [routerLink]="['../../login']">
         <i class="plus icon"></i> Jetzt anmelden
       </a>
     </ng-template>
 
-    <button *ngIf="authService.isLoggedIn() && user?.vaccination_id == null && this.checkMaxPersons() == false && user?.vaccination_id != vaccination.id" disabled="disabled" class="ui button" [routerLink]="['../../user', vaccination?.id]">
+    <button *ngIf="authService.isLoggedIn() && user?.vaccination_id == null && this.checkMaxParticipants() == false && user?.vaccination_id != vaccination.id" disabled="disabled" class="ui button" [routerLink]="['../../user', vaccination?.id]">
     <i class="plus icon"></i> Jetzt anmelden
   </button>
 
