--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -62,7 +62,7 @@
       <div *ngIf="this.vacToLoc == true" class="field">
         <label>Ort</label>
         <select class="ui dropdown" formControlName="location_id">
-      <option *ngFor="let location of locations" [value]="this.location.id">
+      <option *ngFor="let location of locations" [value]="location.id">
       {{location.name}}, {{location.postalcode}} {{location.city}}</option>
     </select>
         <br>
